clusters/agora-k3s-02/application/erettsegi-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erettsegi-backend
  namespace: application
  labels:
    app: erettsegi-backend
    pod-security.kubernetes.io/audit: baseline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erettsegi-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: erettsegi-backend
    spec:
      serviceAccountName: erettsegi-backend-svc-a
      imagePullSecrets:
      - name: regcred
      containers:
      - name: erettsegi-backend
        image: "europe-west3-docker.pkg.dev/agora-jegyrendszer/jegyrendszer/erettsegi-backend:1.20.10" # {"$imagepolicy": "flux-system:erettsegi-backend"}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 3000
          name: backend-open
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erettsegi-frontend
  namespace: application
  labels:
    app: erettsegi-frontend
    pod-security.kubernetes.io/audit: baseline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erettsegi-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: erettsegi-frontend
    spec:
      serviceAccountName: erettsegi-frontend-svc-a
      imagePullSecrets:
      - name: regcred
      containers:
      - name: erettsegi-frontend
        image: "europe-west3-docker.pkg.dev/agora-jegyrendszer/jegyrendszer/erettsegi-frontend:1.20.13" # {"$imagepolicy": "flux-system:erettsegi-frontend"}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 3000
          name: frontend-open
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: erettsegi-backend-service
  namespace: application
spec:
  selector:
    app: erettsegi-backend
  ports:
  - port: 3001
    targetPort: backend-open
---
apiVersion: v1
kind: Service
metadata:
  name: erettsegi-frontend-service
  namespace: application
spec:
  selector:
    app: erettsegi-frontend
  ports:
  - port: 3000
    targetPort: frontend-open
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erettsegi-site-ingress
  namespace: application
  labels:
    name: erettsegi-site-ingress
spec:
  rules:
  - host: irodalomerettsegi.hu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: erettsegi-frontend-service
            port:
              number: 3000
  - host: api.irodalomerettsegi.hu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: erettsegi-backend-service
            port:
              number: 3001
